[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
version = "0.1.0"
description = "Python template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
python-template = "python_template:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8"
]

[tool.setuptools]
py-modules = ["python_template"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
